2005-11-18 Magnus Hagdorn
 * moved doc to CVS module glimmer-doc
 * Makefile.am: removed subdir doc
 * configure.in: removed doc related stuff

2005-11-16 Magnus Hagdorn
 * configure.in: add some sanity checks and use variables pointing to where 
   sources live
 * tests/Makefile.am: use variables pointing to where sources live
 * src/fortran/Makefile.am: ditto
 * glide_launch.py: avoid fortran sillyness where strings have to be quoted
 * cvs_version.py: we now have to specify where Entries file is
 * glimmer_global.f90: add directory separator constant
 * glimmer_log.f90: new function for deriving name of logfile
 * simple_glide.f90: use logname to get name of logfile
 * eis_glide.f90: ditto
 * INSTALL: update

2005-11-07 Magnus Hagdorn
 * src/fortran/Makefile.am: use wildcard function for *.mod

2005-11-07 Magnus Hagdorn
 * glimmer_ncio.f90: print out file name of netCDF file that cannot be read
 * glimmer_config.f90: add logical variables
 * eis_vars.def: load ELA from file if present
 * eis_ela.f90: do not calculate ELA field (presumably so that it can be
   read from netCDF file), do not set MB to 0 for areas covered by sea

2005-11-05 Magnus Hagdorn
 * doc/Makefile.am: fix permissions
 * simple_forcing.f90: fix sign for temp gradient for moving margin, pointed
   out by Qinghua Yang

2005-11-04 Magnus Hagdorn
 * common/template.tex: new for generating eps files from gnuplot/xfig output
 * common/definitions.tex: new boolean for html code
 * common/packages.tex: use graphicx instead of epsfig
 * dg/dg.tex use includegraphics instead of epsfig
 * num/basal_bc.tex: ditto
 * num/grid.tex: ditto
 * num/kinematics.tex: ditto
 * num/vert_velo.tex: ditto
 * ug/glint.tex: ditto
 * ug/intro.tex: ditto
 * glimmer.tex.in: add code to autogenerate pngs for html output
 * make_doc.rules: changed rules so we can generate eps for all graphics
 * glimmer_html.tex: new master tex file for generating html output
 * Makefile.am: target for generating html output